
- #7241, #12555, #13076, #13138, #13338, #13152, #13153:
  fix a soundness bug in the pattern-matching compiler
  when side-effects mutate the scrutinee during matching.
  (Gabriel Scherer, review by Nick Roberts)

- #13179: Fix evaluation of toplevel lets in classes containing
  local opens
  (Vincent Laviron, review by Hugo Heuzard, Nathanaëlle Courant
   and Gabriel Scherer)

### Standard library:

- #12884: Add `Queue.drop`
  (Léo Andrès, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #13168: In Array.shuffle, clarify the code that validates the
  result of the user-supplied function `rand`, and improve the
  error message that is produced when this result is invalid.
  (François Pottier, review by Florian Angeletti, Daniel Bünzli
   and Gabriel Scherer)

- #12133: Expose support for printing substrings in Format
  (Florian Angeletti, review by Daniel Bünzli, Gabriel Scherer
   and Nicolás Ojeda Bär)

- #12869: Add List.take, List.drop, List.take_while and List.drop_while
  (Kate Deplaix and Oscar Butler-Aldridge, review by Nicolás Ojeda Bär,
   Craig Ferguson and Gabriel Scherer)

- #12885: move Dynarray to an unboxed representation
  (Gabriel Scherer, suggestions by Vincent Laviron,
   review by Olivier Nicole and Simon Cruanes, Yann Leray, Alain Frisch)

- #13047: Add Sys.poll_actions to (only) run pending runtime actions.
  (Nick Barnes, review by Gabriel Scherer, Guillaume Munch-Maccagnoni, and
  Vincent Laviron)

- #13144: Dynarray.{equal, compare}
  (Gabriel Scherer,
   review by Jeremy Yallop, Daniel Bünzli and Olivier Nicole,
   request by Olivier Nicole)

- #13171: expose `Domain.self_index : unit -> int` (a somewhat-dense
  indexing of currently-running domains) for advanced use-cases of
  domain-indexed concurrent data structures.
  (Gabriel Scherer,
   review by KC Sivaramakrishnan, Miod Vallat and Nicolás Ojeda Bär,
   report by Vesa Karvonen)

- #13197: Dynarray.blit, which allows to extend the destination