@@ -177,6 +177,10 @@ ___________
   (Vincent Laviron, review by Hugo Heuzard, Nathanaëlle Courant
    and Gabriel Scherer)
 
+- #13???: Add -set-global-string option to both compilers, allowing a C symbol
+  to be added to the binary with the given name and value.
+  (David Allsopp, review by ???)
+
 ### Standard library:
 
 - #12884: Add `Queue.drop`
